@@ -1,7 +1,9 @@
 package io.github.kongweiguang.http.server;
 
 import com.sun.net.httpserver.*;
-import io.github.kongweiguang.http.client.core.Method;
+import io.github.kongweiguang.http.common.core.Method;
+import io.github.kongweiguang.http.common.exception.KongHttpRuntimeException;
+import io.github.kongweiguang.http.common.utils.HttpServerUtil;
 import io.github.kongweiguang.http.server.core.*;
 import io.github.kongweiguang.http.server.core.HttpHandler;
 import io.github.kongweiguang.http.server.sse.SSEHandler;
@@ -14,9 +16,9 @@ import java.util.concurrent.Executor;
 import java.util.function.Consumer;
 
 import static io.github.kongweiguang.core.lang.Assert.notNull;
-import static io.github.kongweiguang.http.client.core.Method.*;
+import static io.github.kongweiguang.http.common.core.Method.*;
 import static java.util.Objects.nonNull;
-import static java.util.Optional.ofNullable;
+import static io.github.kongweiguang.core.lang.Opt.ofNullable;
 
 /**
  * 基于内置httpserver封装的简易http服务器
@@ -28,7 +30,7 @@ public class JavaServer {
     private final List<Filter> filters = new ArrayList<>();
     private final HttpServer httpServer;
 
-    private JavaServer(final HttpsConfigurator config) {
+    private JavaServer(HttpsConfigurator config) {
         try {
             if (nonNull(config)) {
                 HttpsServer server = HttpsServer.create();
@@ -38,20 +40,20 @@ public class JavaServer {
                 this.httpServer = HttpServer.create();
             }
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new KongHttpRuntimeException(e);
         }
     }
-    
+
 
     /**
      * 设置自定义错误页面
-     * 
+     *
      * @param statusCode 状态码
-     * @param content 错误页面内容
+     * @param content    错误页面内容
      * @return 当前对象
      */
     public JavaServer errorPage(int statusCode, String content) {
-        InnerUtil.setErrorPage(statusCode, content);
+        HttpServerUtil.setErrorPage(statusCode, content);
         return this;
     }
 
@@ -93,26 +95,25 @@ public class JavaServer {
      * @param fileName 文件名称
      * @return 当前对象
      */
-    public JavaServer web(final String path,final String filePath, final String fileName) {
-        CenterHandler.add(ReqType.STATIC, GET,path, new StaticHandler(path, filePath,fileName));
-        return this;
+    public JavaServer web(String path, String filePath, String fileName) {
+        return web(path, filePath, fileName, false, 0);
     }
-    
+
     /**
      * 添加静态资源目录，并设置高级选项
      *
-     * @param path         请求前缀
-     * @param enableCache  是否启用缓存
-     * @param cacheMaxAge  缓存时间(秒)
-     * @param indexFile    默认文件名称
+     * @param path        请求前缀
+     * @param enableCache 是否启用缓存
+     * @param cacheMaxAge 缓存时间(秒)
+     * @param fileName    默认文件名称
      * @return 当前对象
      */
-    public JavaServer web(final String path,final String filePath, boolean enableCache, int cacheMaxAge, String indexFile) {
-        StaticHandler handler = new StaticHandler(path,filePath, indexFile, enableCache, cacheMaxAge);
-        CenterHandler.add(ReqType.STATIC, GET,path, handler);
+    public JavaServer web(String path, String filePath, String fileName, boolean enableCache, int cacheMaxAge) {
+        StaticHandler handler = new StaticHandler(path, filePath, fileName, enableCache, cacheMaxAge);
+        CenterHandler.add(ReqType.STATIC, GET, path, handler);
         return this;
     }
-    
+
     /**
      * 添加静态资源目录，使用高级WebHandler配置
      *
@@ -121,8 +122,8 @@ public class JavaServer {
      * @param config   WebHandler配置函数
      * @return 当前对象
      */
-    public JavaServer web(final String path,final String filePath, Consumer<StaticHandler> config) {
-        StaticHandler handler = new StaticHandler(path, filePath,null);
+    public JavaServer web(String path, String filePath, Consumer<StaticHandler> config) {
+        StaticHandler handler = new StaticHandler(path, filePath, null, false, 0);
         config.accept(handler);
         CenterHandler.add(ReqType.STATIC, GET, path, handler);
         return this;
@@ -134,12 +135,12 @@ public class JavaServer {
      * @param filter 过滤器 {@link HttpFilter}
      * @return 当前对象
      */
-    public JavaServer filter(final HttpFilter filter) {
+    public JavaServer filter(HttpFilter filter) {
         notNull(filter, "filter must not be null");
 
         filters.add(new Filter() {
             @Override
-            public void doFilter(final HttpExchange exchange, final com.sun.net.httpserver.Filter.Chain chain) throws IOException {
+            public void doFilter(HttpExchange exchange, com.sun.net.httpserver.Filter.Chain chain) throws IOException {
                 filter.doFilter(new HttpReq(exchange), new HttpRes(exchange), chain);
             }
 
@@ -159,7 +160,7 @@ public class JavaServer {
      * @param handler 处理器
      * @return 当前对象
      */
-    public JavaServer sse(final Method method, final String path, final SSEHandler handler) {
+    public JavaServer sse(Method method, String path, SSEHandler handler) {
         CenterHandler.add(ReqType.SSE, method, path, handler);
         return this;
     }
@@ -171,7 +172,7 @@ public class JavaServer {
      * @param handler 处理器
      * @return 当前对象
      */
-    public JavaServer sse(final String path, final SSEHandler handler) {
+    public JavaServer sse(String path, SSEHandler handler) {
         CenterHandler.add(ReqType.SSE, path, handler);
         return this;
     }
@@ -184,7 +185,7 @@ public class JavaServer {
      * @param handler 处理器 {@link HttpHandler}
      * @return 当前对象
      */
-    public JavaServer rest(final Method method, final String path, final HttpHandler handler) {
+    public JavaServer rest(Method method, String path, HttpHandler handler) {
         CenterHandler.add(ReqType.REST, method, path, handler);
         return this;
     }
@@ -196,7 +197,7 @@ public class JavaServer {
      * @param handler 处理器 {@link HttpHandler}
      * @return 当前对象
      */
-    public JavaServer rest(final String path, final HttpHandler handler) {
+    public JavaServer rest(String path, HttpHandler handler) {
         CenterHandler.add(ReqType.REST, path, handler);
         return this;
     }
@@ -208,7 +209,7 @@ public class JavaServer {
      * @param handler 处理器 {@link HttpHandler}
      * @return 当前对象
      */
-    public JavaServer get(final String path, final HttpHandler handler) {
+    public JavaServer get(String path, HttpHandler handler) {
         CenterHandler.add(ReqType.REST, GET, path, handler);
         return this;
     }
@@ -220,7 +221,7 @@ public class JavaServer {
      * @param handler 处理器 {@link HttpHandler}
      * @return 当前对象
      */
-    public JavaServer post(final String path, final HttpHandler handler) {
+    public JavaServer post(String path, HttpHandler handler) {
         CenterHandler.add(ReqType.REST, POST, path, handler);
         return this;
     }
@@ -232,7 +233,7 @@ public class JavaServer {
      * @param handler 处理器 {@link HttpHandler}
      * @return 当前对象
      */
-    public JavaServer delete(final String path, final HttpHandler handler) {
+    public JavaServer delete(String path, HttpHandler handler) {
         CenterHandler.add(ReqType.REST, DELETE, path, handler);
         return this;
     }
@@ -244,7 +245,7 @@ public class JavaServer {
      * @param handler 处理器 {@link HttpHandler}
      * @return 当前对象
      */
-    public JavaServer put(final String path, final HttpHandler handler) {
+    public JavaServer put(String path, HttpHandler handler) {
         CenterHandler.add(ReqType.REST, PUT, path, handler);
         return this;
     }
@@ -269,9 +270,9 @@ public class JavaServer {
     }
 
 
-    private void start(final InetSocketAddress address) {
+    private void start(InetSocketAddress address) {
         try {
-            final long start = System.currentTimeMillis();
+            long start = System.currentTimeMillis();
 
             server().bind(address, 0);
 
@@ -282,12 +283,12 @@ public class JavaServer {
             print(start);
 
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new KongHttpRuntimeException(e);
         }
     }
 
     private void addContext() {
-        final HttpContext context = server().createContext("/", CenterHandler.of());
+        HttpContext context = server().createContext("/", CenterHandler.of());
 
         if (!filters.isEmpty()) {
             context.getFilters().addAll(filters);
@@ -295,14 +296,15 @@ public class JavaServer {
     }
 
     private void print(long start) {
-        final long cur = System.currentTimeMillis();
+        long cur = System.currentTimeMillis();
 
         System.err.printf(
-                "[%s]KHTTP Server listen on 【%s:%s】 use time %dms %n",
-                String.format("%tF %<tT", cur),
-                server().getAddress().getHostName(),
-                server().getAddress().getPort(),
-                (cur - start)
+                "[%s] Kong-HTTP-Server listen on 【%s:%s】 use time %dms %n".formatted(
+                        String.format("%tF %<tT", cur),
+                        server().getAddress().getHostName(),
+                        server().getAddress().getPort(),
+                        (cur - start))
+
         );
     }
 
